@@ -1,3 +1,7 @@
+Sat Jun  1 13:58:16 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	* current-trunk: Merged from upstream-trunk.
+
 Sat Jun  1 13:53:35 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	* upstream-trunk: Sync'd with
